[package]
name = "uniswap_v3"
version = "0.1.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"

[dependencies]
ink = { version = "~4.0.0-rc", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# Include brush as a dependency and enable default implementation for PSP22 via brush feature
openbrush = { tag = "3.0.0-beta.1", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["psp22"] }
[lib]
name = "uniswap_v3"
path = "lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = [
		"ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
]
